move search-bar to the left to avoid overlap with context-bar

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -11,8 +11,8 @@
 .chatpal-external-search-input {
 	position: absolute;
 	top: 12px;
-	right: 40px;
-	z-index: 1000;
+	right: 220px;
+	z-index: 1;
 	display: block;
 }
 
